// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module: pending export: removePending When testObject is either pending or lagging When in lagging Should remove test from lagging 1`] = `
Object {
  "usePending": Object {
    "lagging": Array [],
    "pending": Array [],
  },
  "useSuiteId": Object {
    "id": 1000,
    "name": "suite_name",
  },
  "useTestCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Array [],
  },
  "useTestObjects": Array [],
}
`;

exports[`module: pending export: removePending When testObject is either pending or lagging When in pending Should remove test from pending 1`] = `
Object {
  "usePending": Object {
    "lagging": Array [],
    "pending": Array [],
  },
  "useSuiteId": Object {
    "id": 1000,
    "name": "suite_name",
  },
  "useTestCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Array [],
  },
  "useTestObjects": Array [],
}
`;

exports[`module: pending export: setPending Should set supplied test object as pending 1`] = `
Object {
  "usePending": Object {
    "lagging": Array [],
    "pending": Array [
      VestTest {
        "failed": false,
        "fieldName": "test_0",
        "groupName": "group_name",
        "id": "4",
        "isWarning": false,
        "statement": "Some statement string",
        "testFn": [MockFunction],
      },
    ],
  },
  "useSuiteId": Object {
    "id": 1000,
    "name": "suite_name",
  },
  "useTestCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Array [],
  },
  "useTestObjects": Array [],
}
`;

exports[`module: pending export: setPending When a field of the same profile is in lagging array Should remove test from lagging array 1`] = `
Object {
  "usePending": Object {
    "lagging": Array [
      VestTest {
        "failed": false,
        "fieldName": "test_2",
        "id": "12",
        "isWarning": false,
        "statement": "Some statement string",
        "testFn": [MockFunction],
      },
      VestTest {
        "failed": false,
        "fieldName": "test_1",
        "id": "11",
        "isWarning": false,
        "statement": "Some statement string",
        "testFn": [MockFunction],
      },
    ],
    "pending": Array [
      VestTest {
        "canceled": true,
        "failed": false,
        "fieldName": "test_0",
        "groupName": "group_name",
        "id": "10",
        "isWarning": false,
        "statement": "Some statement string",
        "testFn": [MockFunction],
      },
    ],
  },
  "useSuiteId": Object {
    "id": 1000,
    "name": "suite_name",
  },
  "useTestCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Array [],
  },
  "useTestObjects": Array [],
}
`;
